Fix: New chat crash - null session ID issue
- Fixed startNewChat() in MainActivity to return session ID directly
- Changed ChatViewModel.createSession() to return String sessionId
- Added validation for session ID in SessionDetailActivity
- Improved SessionDetailViewModel with proper dependency injection
- Added Factory for SessionDetailViewModel
- Added error handling and error messages strings
- Default to free model 'opencode/sonic' when no API key configured

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="session_this_week">This Week</string>
     <string name="session_this_month">This Month</string>
     <string name="session_older">Older</string>
+    <string name="session_detail_title">Chat Session</string>
+    <string name="error_invalid_session">Invalid session</string>
 
     <!-- Model Selection -->
     <string name="models_title">Select Model</string>
